force-app/main/default/objects/EPI__c/fields/VSR_DataOtherText__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataOtherText__c</fullName>
    <label>VSR_DataOtherText</label>
    <length>100</length>
    <type>Text</type>
</CustomField>