force-app/main/default/objects/EPI__c/fields/VSR_DataPercent__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataPercent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataPercent</label>
    <type>Checkbox</type>
</CustomField>