force-app/main/default/objects/EPI__c/fields/VSR_DataToBeMatch__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataToBeMatch__c</fullName>
    <label>VSR_DataToBeMatch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>