force-app/main/default/objects/EPI__c/fields/VSR_DateRangeFrom__c.field-meta.xml
<CustomField>
    <fullName>VSR_DateRangeFrom__c</fullName>
    <label>VSR_DateRangeFrom</label>
    <type>DateTime</type>
</CustomField>