force-app/main/default/objects/EPI__c/fields/VSR_DateRangeTo__c.field-meta.xml
<CustomField>
    <fullName>VSR_DateRangeTo__c</fullName>
    <label>VSR_DateRangeTo</label>
    <type>DateTime</type>
</CustomField>