force-app/main/default/objects/EPI__c/fields/VSR_Electronic__c.field-meta.xml
<CustomField>
    <fullName>VSR_Electronic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_Electronic</label>
    <type>Checkbox</type>
</CustomField>