force-app/main/default/objects/EPI__c/fields/VSR_Electronic_SpontaneousTerminationsOf__c.field-meta.xml
<CustomField>
    <fullName>VSR_Electronic_SpontaneousTerminationsOf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_Electronic_SpontaneousTerminationsOf</label>
    <type>Checkbox</type>
</CustomField>