force-app/main/default/objects/EPI__c/fields/VSR_EstimateNoOfRecords__c.field-meta.xml
<CustomField>
    <fullName>VSR_EstimateNoOfRecords__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_EstimateNoOfRecords</label>
    <type>Checkbox</type>
</CustomField>