force-app/main/default/objects/EPI__c/fields/VSR_ExternalRequesterName__c.field-meta.xml
<CustomField>
    <fullName>VSR_ExternalRequesterName__c</fullName>
    <label>VSR_ExternalRequesterName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>