force-app/main/default/objects/EPI__c/fields/VSR_FileFormatAccessFormat__c.field-meta.xml
<CustomField>
    <fullName>VSR_FileFormatAccessFormat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_FileFormatAccessFormat</label>
    <type>Checkbox</type>
</CustomField>