force-app/main/default/objects/EPI__c/fields/VSR_FileFormatASCIIText__c.field-meta.xml
<CustomField>
    <fullName>VSR_FileFormatASCIIText__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_FileFormatASCIIText</label>
    <type>Checkbox</type>
</CustomField>