force-app/main/default/objects/EPI__c/fields/VSR_FileFormatExcelFormat__c.field-meta.xml
<CustomField>
    <fullName>VSR_FileFormatExcelFormat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_FileFormatExcelFormat</label>
    <type>Checkbox</type>
</CustomField>