force-app/main/default/objects/EPI__c/fields/VSR_FileFormatSASDataset__c.field-meta.xml
<CustomField>
    <fullName>VSR_FileFormatSASDataset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_FileFormatSASDataset</label>
    <type>Checkbox</type>
</CustomField>