force-app/main/default/objects/EPI__c/fields/VSR_HaveDocumentsToUpload__c.field-meta.xml
<CustomField>
    <fullName>VSR_HaveDocumentsToUpload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_HaveDocumentsToUpload</label>
    <type>Checkbox</type>
</CustomField>