force-app/main/default/objects/EPI__c/fields/VSR_HowDataWillBeUsed__c.field-meta.xml
<CustomField>
    <fullName>VSR_HowDataWillBeUsed__c</fullName>
    <label>VSR_HowDataWillBeUsed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>