force-app/main/default/objects/EPI__c/fields/VSR_IsRequester_AC_PressOffice_OVS__c.field-meta.xml
<CustomField>
    <fullName>VSR_IsRequester_AC_PressOffice_OVS__c</fullName>
    <label>VSR_IsRequester_AC_PressOffice_OVS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>