force-app/main/default/objects/EPI__c/fields/VSR_OtherDate__c.field-meta.xml
<CustomField>
    <fullName>VSR_OtherDate__c</fullName>
    <label>VSR_OtherDate</label>
    <type>DateTime</type>
</CustomField>