force-app/main/default/objects/EPI__c/fields/VSR_Paper__c.field-meta.xml
<CustomField>
    <fullName>VSR_Paper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_Paper</label>
    <type>Checkbox</type>
</CustomField>