force-app/main/default/objects/EPI__c/fields/VSR_Paper_Births__c.field-meta.xml
<CustomField>
    <fullName>VSR_Paper_Births__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_Paper_Births</label>
    <type>Checkbox</type>
</CustomField>