force-app/main/default/objects/EPI__c/fields/VSR_Paper_OtherText__c.field-meta.xml
<CustomField>
    <fullName>VSR_Paper_OtherText__c</fullName>
    <label>VSR_Paper_OtherText</label>
    <length>100</length>
    <type>Text</type>
</CustomField>