force-app/main/default/objects/EPI__c/fields/VSR_Paper_SpontaneousTerminationsOfPregn__c.field-meta.xml
<CustomField>
    <fullName>VSR_Paper_SpontaneousTerminationsOfPregn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_Paper_SpontaneousTerminationsOfPregn</label>
    <type>Checkbox</type>
</CustomField>