force-app/main/default/objects/EPI__c/fields/VSR_PaperReason__c.field-meta.xml
<CustomField>
    <fullName>VSR_PaperReason__c</fullName>
    <label>VSR_PaperReason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>