force-app/main/default/objects/EPI__c/fields/VSR_PercentComplete__c.field-meta.xml
<CustomField>
    <fullName>VSR_PercentComplete__c</fullName>
    <label>VSR_PercentComplete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>