force-app/main/default/objects/EPI__c/fields/VSR_ReasonForRequest__c.field-meta.xml
<CustomField>
    <fullName>VSR_ReasonForRequest__c</fullName>
    <label>VSR_ReasonForRequest</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>