force-app/main/default/objects/EPI__c/fields/VSR_RequestTitle__c.field-meta.xml
<CustomField>
    <fullName>VSR_RequestTitle__c</fullName>
    <label>VSR_RequestTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>