force-app/main/default/objects/EPI__c/fields/VSR_RevisingState__c.field-meta.xml
<CustomField>
    <fullName>VSR_RevisingState__c</fullName>
    <label>VSR_RevisingState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>