force-app/main/default/objects/EPI__c/fields/VSR_ServiceResponseLevel__c.field-meta.xml
<CustomField>
    <fullName>VSR_ServiceResponseLevel__c</fullName>
    <label>VSR_ServiceResponseLevel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Routine-1-4 Weeks</fullName>
            </value>
            <value>
                <fullName>Urgent-Within 24 Hours</fullName>
            </value>
            <value>
                <fullName>Identifiable Data Requests- 4-8 weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>