force-app/main/default/objects/EPI__c/fields/VSR_StatsAnalystId__c.field-meta.xml
<CustomField>
    <fullName>VSR_StatsAnalystId__c</fullName>
    <label>VSR_StatsAnalystId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>