force-app/main/default/objects/EPI__c/fields/VSR_StatsAnalystName__c.field-meta.xml
<CustomField>
    <fullName>VSR_StatsAnalystName__c</fullName>
    <label>VSR_StatsAnalystName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>