force-app/main/default/objects/EPI__c/fields/VSR_SubPopoluationAddedVars__c.field-meta.xml
<CustomField>
    <fullName>VSR_SubPopoluationAddedVars__c</fullName>
    <label>VSR_SubPopoluationAddedVars</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>