force-app/main/default/objects/EPI__c/fields/VSR_SubPopoluationAge10__c.field-meta.xml
<CustomField>
    <fullName>VSR_SubPopoluationAge10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_SubPopoluationAge10</label>
    <type>Checkbox</type>
</CustomField>