force-app/main/default/objects/EPI__c/fields/VSR_SubPopoluationAge5__c.field-meta.xml
<CustomField>
    <fullName>VSR_SubPopoluationAge5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_SubPopoluationAge5</label>
    <type>Checkbox</type>
</CustomField>