force-app/main/default/objects/EPI__c/fields/VSR_SubPopoluationAgeDeathAdjust__c.field-meta.xml
<CustomField>
    <fullName>VSR_SubPopoluationAgeDeathAdjust__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_SubPopoluationAgeDeathAdjust</label>
    <type>Checkbox</type>
</CustomField>