force-app/main/default/objects/EPI__c/fields/VSR_SubPopoluationAgeGroups__c.field-meta.xml
<CustomField>
    <fullName>VSR_SubPopoluationAgeGroups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_SubPopoluationAgeGroups</label>
    <type>Checkbox</type>
</CustomField>