force-app/main/default/objects/EPI__c/fields/VSR_SubPopoluationAgeOther__c.field-meta.xml
<CustomField>
    <fullName>VSR_SubPopoluationAgeOther__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_SubPopoluationAgeOther</label>
    <type>Checkbox</type>
</CustomField>