force-app/main/default/objects/EPI__c/fields/VSR_SubPopoluationAgeOtherText__c.field-meta.xml
<CustomField>
    <fullName>VSR_SubPopoluationAgeOtherText__c</fullName>
    <label>VSR_SubPopoluationAgeOtherText</label>
    <length>150</length>
    <type>Text</type>
</CustomField>