force-app/main/default/objects/EPI__c/fields/VSR_SubPopoluationBorough__c.field-meta.xml
<CustomField>
    <fullName>VSR_SubPopoluationBorough__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_SubPopoluationBorough</label>
    <type>Checkbox</type>
</CustomField>