force-app/main/default/objects/EPI__c/fields/VSR_SubPopoluationCommunityDistrict__c.field-meta.xml
<CustomField>
    <fullName>VSR_SubPopoluationCommunityDistrict__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_SubPopoluationCommunityDistrict</label>
    <type>Checkbox</type>
</CustomField>