force-app/main/default/objects/EPI__c/fields/VSR_SubPopoluationGeography__c.field-meta.xml
<CustomField>
    <fullName>VSR_SubPopoluationGeography__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_SubPopoluationGeography</label>
    <type>Checkbox</type>
</CustomField>