force-app/main/default/objects/EPI__c/fields/VSR_SubPopoluationNYCResident__c.field-meta.xml
<CustomField>
    <fullName>VSR_SubPopoluationNYCResident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_SubPopoluationNYCResident</label>
    <type>Checkbox</type>
</CustomField>