force-app/main/default/objects/EPI__c/fields/VSR_SubPopoluationOther__c.field-meta.xml
<CustomField>
    <fullName>VSR_SubPopoluationOther__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_SubPopoluationOther</label>
    <type>Checkbox</type>
</CustomField>