force-app/main/default/objects/EPI__c/fields/VSR_SubPopoluationRace__c.field-meta.xml
<CustomField>
    <fullName>VSR_SubPopoluationRace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_SubPopoluationRace</label>
    <type>Checkbox</type>
</CustomField>