force-app/main/default/objects/EPI__c/fields/VSR_SubPopoluationSex__c.field-meta.xml
<CustomField>
    <fullName>VSR_SubPopoluationSex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_SubPopoluationSex</label>
    <type>Checkbox</type>
</CustomField>