force-app/main/default/objects/EPI__c/fields/VSR_SubPopoluationUnited__c.field-meta.xml
<CustomField>
    <fullName>VSR_SubPopoluationUnited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_SubPopoluationUnited</label>
    <type>Checkbox</type>
</CustomField>