force-app/main/default/objects/EPI__c/fields/VSR_VariableAge__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableAge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableAge</label>
    <type>Checkbox</type>
</CustomField>