force-app/main/default/objects/EPI__c/fields/VSR_VariableAliasFirstName__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableAliasFirstName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableAliasFirstName</label>
    <type>Checkbox</type>
</CustomField>