force-app/main/default/objects/EPI__c/fields/VSR_VariableAliasLastName__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableAliasLastName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableAliasLastName</label>
    <type>Checkbox</type>
</CustomField>