force-app/main/default/objects/EPI__c/fields/VSR_VariableAliasMiddleName__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableAliasMiddleName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableAliasMiddleName</label>
    <type>Checkbox</type>
</CustomField>