force-app/main/default/objects/EPI__c/fields/VSR_VariableAptNo__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableAptNo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableAptNo</label>
    <type>Checkbox</type>
</CustomField>