force-app/main/default/objects/EPI__c/fields/VSR_VariableCity__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableCity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableCity</label>
    <type>Checkbox</type>
</CustomField>