force-app/main/default/objects/EPI__c/fields/VSR_VariableDateOfDeath__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableDateOfDeath__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableDateOfDeath</label>
    <type>Checkbox</type>
</CustomField>