force-app/main/default/objects/EPI__c/fields/VSR_VariableDOB__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableDOB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableDOB</label>
    <type>Checkbox</type>
</CustomField>