force-app/main/default/objects/EPI__c/fields/VSR_VariableFirstName__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableFirstName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableFirstName</label>
    <type>Checkbox</type>
</CustomField>