force-app/main/default/objects/EPI__c/fields/VSR_VariableHouseNo__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableHouseNo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableHouseNo</label>
    <type>Checkbox</type>
</CustomField>