force-app/main/default/objects/EPI__c/fields/VSR_VariableLastName__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableLastName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableLastName</label>
    <type>Checkbox</type>
</CustomField>