force-app/main/default/objects/EPI__c/fields/VSR_VariableMaidenName__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableMaidenName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableMaidenName</label>
    <type>Checkbox</type>
</CustomField>