force-app/main/default/objects/EPI__c/fields/VSR_VariableMiddleName__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableMiddleName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableMiddleName</label>
    <type>Checkbox</type>
</CustomField>