force-app/main/default/objects/EPI__c/fields/VSR_VariableOCMECaseNo__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableOCMECaseNo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableOCMECaseNo</label>
    <type>Checkbox</type>
</CustomField>