force-app/main/default/objects/EPI__c/fields/VSR_VariableOther__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableOther__c</fullName>
    <label>VSR_VariableOther</label>
    <length>255</length>
    <type>Text</type>
</CustomField>