force-app/main/default/objects/EPI__c/fields/VSR_VariableSecureSubmission__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableSecureSubmission__c</fullName>
    <label>VSR_VariableSecureSubmission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>