force-app/main/default/objects/EPI__c/fields/VSR_VariableSex__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableSex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableSex</label>
    <type>Checkbox</type>
</CustomField>