force-app/main/default/objects/EPI__c/fields/VSR_VariableSSN__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableSSN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableSSN</label>
    <type>Checkbox</type>
</CustomField>