force-app/main/default/objects/EPI__c/fields/VSR_VariableStreet__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableStreet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableStreet</label>
    <type>Checkbox</type>
</CustomField>