force-app/main/default/objects/EPI__c/fields/VSR_VariableZip__c.field-meta.xml
<CustomField>
    <fullName>VSR_VariableZip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_VariableZip</label>
    <type>Checkbox</type>
</CustomField>