force-app/main/default/objects/EPI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EPIDC_FullDatasetName__c</columns>
    <columns>EPIDC_AbbrDatasetName__c</columns>
    <columns>EPIDC_DataGroup__c</columns>
    <columns>EPIDC_DataSteward__c</columns>
    <columns>EPIDC_DataStewardShowExternal__c</columns>
    <columns>EPIDC_SkipWorkflow__c</columns>
    <columns>EPIDC_SearchMode__c</columns>
    <columns>EPIDC_SearchModeChangeDate__c</columns>
    <columns>EPIDC_EPIDC_tblRequestId_Old__c</columns>
    <columns>EPIDC_PrimaryContactName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>